try to fix overflow issue

--- a/app/stylesheets/application.less
+++ b/app/stylesheets/application.less
@@ -104,7 +104,7 @@ form.formtastic{
 
 .submission_modal{
 	overflow: hidden; width: 500px; padding: 5px;
-	.media{ width: 272px; margin-right: 20px; float: left; }
+	.media{ width: 272px; margin-right: 20px; float: left; height: 163px; }
 	.info{ float: left; width: 208px; p{ margin-bottom: 1em; } }
 	
 	h4{ font: 1.2em 'NeoRetroFillRegular'; margin-bottom: 10px; }
